--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -3,7 +3,7 @@ LARS: We should write a bit about how the system could try to learn habits. Or h
 \\
 LARS: We should think about if it could be nice for the parents to instead of writing rules, simply make the system learn habits based on when the parents turn of the device with their special tag?
 
-\text{Database and functions Lib}
+\textbf{Database and functions Lib}
 \textbf{Website}
 \textbf{Daemon}
 \textbf{API}
