draft error fix

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -58,7 +58,7 @@
 	%Part Perspective
 	
 	\part{Perspective}
-	\input{conclusion.tex}
+	\input{text/conclusion.tex}
 	\input{text/futureWork.tex}
 	
 	\bibliographystyle{plain}
