--- a/report/text/conclusion.tex
+++ b/report/text/conclusion.tex
@@ -1,1 +1,22 @@
 \chapter{Conclusion}
+
+
+First we need to take a look at the problem statement again.
+\begin{verse}
+\textit{Parents are not able to help their children administer their IT/TV consumption.\\
+This results in their children getting a lessened learning ability, a bad sleeping pattern and a higher risk of type 2 diabetes.\\
+How can hardware identification and webservices give parents the tools to help their children manage their media consumption?}
+	\begin{itemize}
+		\item How do we identify unique users in a subtle and child friendly way.
+		\item How do we enforce restrictions on media devices.
+		\item How do we facilitate concepts as rules, permissions and chores without parents interaction.
+	\end{itemize}
+\end{verse}
+
+\section{How do we identify unique users in a subtle and child friendly way}
+Each user in the system has at least one tag (a Radio-frequency Identification) to identify the user. The user then scan his tag  
+
+\section{How do we enforce restrictions on media devices}
+
+
+\section{How do we facilitate concepts as rules, permissions and chores without parents interaction}
