Added daemon flowchart and changed scaling on api flowchart

--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -10,7 +10,7 @@ The API started with one clear goal, to be the middleman between the controllers
 
 \begin{figure}[!h]
 	\centering
-		\includegraphics{images/turnOnAPI1.jpg}
+		\includegraphics[width=0.65\textwidth]{images/turnOnAPI1.jpg}
 	\caption{Flowchart showing how turn on works}
 	\label{fig:turnOnAPI1}
 \end{figure}
