--- a/report/draft.tex
+++ b/report/draft.tex
@@ -73,6 +73,7 @@
 	\begin{appendices}
 	\input{text/oldRuleDesign.tex}
 	\input{text/LightTabel.tex}
+	\input{text/testCases.tex}
 	\end{appendices}
 	
 	%Denne komando lister alle fixme's
