--- a/report/text/conclusion.tex
+++ b/report/text/conclusion.tex
@@ -14,9 +14,11 @@ How can hardware identification and webservices give parents the tools to help t
 \end{verse}
 
 \section{How do we identify unique users in a subtle and child friendly way}
-Each user in the system has at least one tag (a Radio-frequency Identification) to identify the user. The user then scan his tag  
+tags
 
 \section{How do we enforce restrictions on media devices}
+controller, api
 
 
 \section{How do we facilitate concepts as rules, permissions and chores without parents interaction}
+rules and permission, website, daemon.
