--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -55,9 +55,12 @@ Before the test is conducted some test cases should be made the development team
 
 %testcases
 \section{Testcases}
-
+In table \ref{tab:testcase} is one of the test cases that we made for testing the entire Media-Online Management. In the test case both apart of the Website and a controller are tested. The change been done in the web site should affect the controller.\\ 
+ All test cases can be found in appendix \vref{appen:testSuite}.
 %%Test 9.
 \begin{table}[h]
+\label{tab:testcase}
+\caption{Example of a test cases}
 	\centering
 		\begin{tabular*}{\textwidth}{|l|l|}
 		\hline
@@ -95,5 +98,5 @@ Before the test is conducted some test cases should be made the development team
 		\end{tabular*}
 \end{table}
 
-See all testcases in appendix \vref{appen:testSuite}
-\section{Results of the Heuristic Evaluation}
+
+\section{Collected Results of the Heuristic Evaluation}
