--- a/report/draft.tex
+++ b/report/draft.tex
@@ -47,6 +47,7 @@
 	\input{text/api.tex}
 	\input{text/daemon.tex}
 	\input{text/ControllerDesign.tex}
+	\input{text/PrototypeImplemtation.tex}
 	\input{text/usingEthernet.tex}
 	\input{text/usingRFID.tex}
 	\input{text/ArduinoDesign.tex}
