Intro til prototype

--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -3,6 +3,7 @@
 In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the hardware chosen.
 
 \section{Hardware Platform}
+\label{HardwarePlatform}
 In order to control the power to a media(i.e. Television or Computer), some analog power control is needed. Typically this is controlled by an embedded microcontroller\fixme{If this is typical, we need a source}, therefore the choice of hardware platform is to pick the best microcontroller for the project. A development board is usually used during development . A development board is a single printed circuit board with a microcontroller and everything needed to get the microcontroller running. Every I/O\footnote{Input/Output}(generally General-purpose I/O) of the microcontroller is also made easily available using group pins. Picking a hardware platform is then condensed into picking a development board. Following is a comparison of a few different development boards.
 
 \subsubsection{Arduino}\fixme{kilde}
