--- a/report/text/PrototypeImplemtation.tex
+++ b/report/text/PrototypeImplemtation.tex
@@ -5,12 +5,14 @@ To prove the requerments the system the to be able to:
 \begin{itemize}
 	\item Read and accept/decline tags in communication with a server though a online connection.
 	\item Have a good system structur moniter the server connection.
-	\item Regulate the power to a device recording to senario.
+	\item Regulate the power recording to the senario.
 	\item Manage the time usaged and user restigtions. 
 	\item Communicat system status to user though LED light indication. 
 \end{itemize}
 
-The Arduino hardware platform is made a base for the prototype as analysed in  
+The Arduino hardware platform is made the base for the prototype as analysed in section \ref{HardwarePlatform}.
+To make a functional prototype was a Arduino Uno equiped ethernet port chosen. To the Arduino Uno is a RFID shield and breadboard connected.        
+Before looking deeper in system structur of the controller is the code used to communicat with the RFID shield and ethernet port dokumented to give better knowlagde how they work.      
 
 
     
