--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -47,7 +47,7 @@ The test persons also need to know the user. So the test person(s) need a genera
 Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test person(s) is presented to every aspect of the system. The test cases of MOM can be found in section \vref{} \fixme{ref to be inserted}. \\
 
 
-(- choose the Heuristics which it should be evaluated against, ) \fixme{TODO (Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion)}
+(- choose the Heuristics which it should be evaluated against,(Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion) ) \fixme{TODO }
 
 
 \subsection{Presenting the Results}
