--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -2,12 +2,12 @@
 \label{chap:website}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
-\section{Design}\fixme{Her er sikkert en masse 'we' som kan undværes}
+\section{Design}
 %Interface Design
 %What you can do from the website, and how
-As mentioned in the overview, see subsection \vref{section:momswebsite}, we know what the website is required to do for the system.
+As mentioned in the design overview, see subsection \vref{section:momswebsite}, we know what the website is required to do for the system.
 These requirements made the basis for deciding what pages should be created and what each page's functionality should be. During the designing of the website we aimed to fit all relevant information into each page.\\
-All pages have been designed on the blackboards, where we discovered inconsistencies, new navigation paths and learn about how concepts such as rules should be implemented.\\
+All pages have been designed on the blackboards, where inconsistencies was discovered, new navigation paths and learn about how concepts such as rules should be implemented.\\
 Next is a short overview of what pages were designed and their purposes.\\
 \\
 \textbf{Dashboard} is used to get a quick overview of relevant data. The overview is customizable so that each parent can decide what information is most relevant for them.\\
@@ -20,7 +20,7 @@ From this page it is also possible to deactivate a tag, meaning the owner of tha
 \textbf{Devices - Details Tag} is used to display, delete and change information about a tag. A user can only access tags that is registered to his system.\\
 \\
 \textbf{Devices - Add Controller} is used to add controllers to the user's system. In order to add a controller the user must add a unique key found on the controller, this is then checked towards a database of available keys.\\
-However we have not currently implemented this way of validation, but it would be the right way to go in order to commercialize the system and ensure security for our users.\\
+However it has not currently implemented this way of validation, but it would be the right way to go in order to commercialize the system and ensure security for our users.\\
 \\
 \textbf{Devices - Add Tag} is like Add Controller, except with tags. Also in order to register a tag, a user must be dedicated to this tag. The one registering a tag, will be meet by a list of current users in the system. This means that in order to apply a tag, one must first create a user, then register a tag.\\
 \\
@@ -28,7 +28,7 @@ However we have not currently implemented this way of validation, but it would b
 \\
 \textbf{Users - User Details} is for viewing details about a user. It is also used to change information about a user, however it is only possible to change information, if your user is of a manager-role, or if you are the owner of that profile.\\
 \\
-\textbf{Users - Create User} is as the name suggests, used for creating a user. We are making the system ready for children to login to the system already now. We do not have any feature that requires the children to log in to the system as of yet, but a feature might utilize this later on.\\
+\textbf{Users - Create User} is as the name suggests, used for creating a user. The system has been made ready for children to login to the system already now. We do not have any feature that requires the children to log in to the system as of yet, but a feature might utilize this later on.\\
 \\
 \textbf{Users - Chores} is used to get an overview of available chores, and for easy rewarding of already created chores. When a chore is done, the parent should go to this site, and simply select a child and press a button to give them the assigned reward of the chore.\\
 Chores will also have a subsite for creating chores.\\
@@ -63,9 +63,9 @@ We also designed the system such that no other menu or functionality is any more
 \subsection{Color Scheme and Layout Design}
 %Color Schemes
 %Bootstrap and other inspiration sources
-Our color scheme and layout design was inspired by both bootstrap and a website which utilizes bootstrap, called SB Admin\citep{sbadmin}. We have used a standard bootstrap color scheme, and added in a little blue, we wanted to keep the colors simple but no further thought was put into it.\\
+Our color scheme and layout design was inspired by both bootstrap and a website which utilizes bootstrap, called SB Admin\citep{sbadmin}. A standard bootstrap color scheme have been used, and added in a little blue, we wanted to keep the colors simple but no further thought was put into it.\\
 The most of the design is based on standard tools from bootstrap. With exception of the table sorter functionality. Which is a JQuery tool that allows for sorting of tables.\\
-We chose to use bootstrap since it gives an okay design and it is easy to implement prototypes in bootstrap.	
+Bootstrap has been chosen since it gives an okay design and it is easy to implement prototypes in bootstrap.	
 
 
 \section{Implementation}
@@ -109,7 +109,7 @@ The most advanced feature of the web interface is the rule page, therefor it is 
 	\label{fig:createNewRule}
 \end{figure}
 
-As mentioned in the Database chapter, see \vref{chap:database}, rules underwent some changes during development of the MOM system. In the design of rule we decided that a rule could have several actions and conditions (1:many relationship), but during the development of the web page we found the that it would be too advanced for the user. Therefore we decided that in the website a rule can have up to one condition and action (1:1 relationship).\fixme{lisbeth: dette er min version, jeg synes det er bere}\\ 
+As mentioned in the Database chapter, see \vref{chap:database}, rules underwent some changes during development of the MOM system. In the design of rule we decided that a rule could have several actions and conditions (1:many relationship), but during the development of the web page we found the that it would be too advanced for the user. Therefore it was decided that in the website a rule can have up to one condition and action (1:1 relationship).\fixme{lisbeth: dette er min version, jeg synes det er bere}\\ 
 %As mentioned in the Database chapter, see \vref{chap:database}, rules underwent some changes during development of the MOM system. The first layout was the development teams understanding and ideas about the concept, but as the web page was created it became apparent that the first layout was too advanced, with that reasoning the rule concept went from a one:to:many concept to a one:to:one concept.\\
 But that is not the only change made. The first layout was created with names for rules that fit into a computer science way of thinking. Names such as: ''permissionNone'', ''permissionAll'', ''true'' and so forth. These names have been rethought into ''Cannot access any controller'', ''Can access any controller'' and ''Infinite''\fixme{Check om Infinite stadig er ordet.}, to fit into a pure English language.\\
 Yet another change was that rules could not be set to start or end at a given time, they would simply be active constantly after creation and follow the conditional pattern give by the creator.\\
