--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -1,4 +1,5 @@
 \chapter{Design of the Controller}
+\label{chap:controller}
 This chapter is focused on the controller system of the Media-Online Management system. The controller system is the hand and mouth of the MOM system. Handling the every day use of MOM system as activating and restricting users from media devices.\newline
 This chapter is focused on the controller of the Media-Online Management system. The controller consist of a tag reader and power control device which is disgusted in this chapter but when mentioning controller both is implied. \newline
 The design and functionality of the prototype controller will be presented in parallel to the designed end product. \newline
