--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -40,11 +40,11 @@ Before performing a Heuristic evaluation we need to determine what is needed bef
 \subsection{Planning the Evaluation}
 When planing the evaluation the test persons need to get test persons. They need to get a small description of the user and some test cases. They should also get a list of the heuristics from which the system need to be evaluated from. This should all be made prior to the evaluation. \\
 
-The evaluation of Media-online Management system is being done by (a) person(s)\fixme{når jeg ved mere (ental/flertal)} in the group which have been highly involved in the development of system. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group.\\
+The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of system. This is not optimal in this test where the test persons should be an usability expert from outside the development group.\\
 
-The test persons also need to know the user. So the test person(s) need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skill but they are capable to turn on a normal television. \\
+The test persons also need to know the user. So the test persons need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skill but they are capable to turn on a normal television. \\
 
-Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test person(s) is presented to every aspect of the system. The test cases of MOM can be found in section \vref{} \fixme{ref to be inserted}. \\
+Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase} 
 
 
 (- choose the Heuristics which it should be evaluated against,(Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion) ) \fixme{TODO }
@@ -55,6 +55,7 @@ Before the test is conducted some test cases should be made the development team
 
 %testcases
 \section{Testcases}
+\label{sec:testcase}
 In table \ref{tab:testcase} is one of the test cases that we made for testing the entire Media-Online Management. In the test case both apart of the Website and a controller are tested. The change been done in the web site should affect the controller.\\ 
  All test cases can be found in appendix \vref{appen:testSuite}.
 %%Test 9.
