--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -25,6 +25,14 @@ note ={\url{https://github.com/Zucka/girafAdmin/tree/46e19108a6ca0413e2542621255
   year ={1995},
   note ={Looked up: 15-12-2013},
 }
+@manual{HeuristicEvaluationGuide,
+  author ={Nicky Danino},
+  title ={Heuristic Evaluation – a Step By Step Guide Article},
+  address={URL: \url{http://www.sitepoint.com/heuristic-evaluation-guide/}},
+	howpublished = {Website},
+  year ={2001},
+  note ={Looked up: 15-12-2013},
+}
 @MISC{childrenAndNature,
 author = {Children \& Nature Network},
 title = {Children and Nature},
