--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -9,8 +9,7 @@ In a Heuristic evaluation the test person(s) look for errors and potential usabi
 	\item Visibility - make it clear for the user which functions are available in the system and show what the system is doing.
 	\item Consistency - be consistent in the design features and let it be similar to other comparable systems %similar systems/håber mening statid er der
 	\item Familiarity - the language and symbols in the system should be familiar to the user.
-	\item Affordance - let objects that look like something be it. E.g. if it looks like a button, it is a button. %pleas find en bedre sætning end 
-	\fixme{'let objects that look like something be it' bedre forslag???}
+	\item Affordance -  E.g. if it looks like a button, it is a button. %pleas find en bedre sætning end 
 \end{itemize}
 
 \item[Effectiveness] is who ease it is for the user to use it and how safe it is to use:
@@ -35,18 +34,19 @@ Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The t
 
 
 \section{Heuristic Evaluation of Media-Online Management}
-Before performing a Heuristic evaluation we need to determine what is needed before the evaluation is done and how the results should be presented.
+Before performing a Heuristic evaluation we need to determine what is needed before the evaluation is done and how the results should be presented\citep{HeuristicEvaluationGuide}.
 
 \subsection{Planning the Evaluation}
 When planing the evaluation the test persons need to get test persons. They need to get a small description of the user and some test cases. They should also get a list of the heuristics from which the system need to be evaluated from. This should all be made prior to the evaluation. \\
 
-The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of system. This is not optimal in this test where the test persons should be an usability expert from outside the development group.\\
+The evaluation of Media-online Management system is being done by test persons in the group which have been highly involved in the development of system. This is not optimal in this test where the test persons should be an usability expert from outside the development group\citep{DIEB}.\\
 
 The test persons also need to know the user. So the test persons need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skill but they are capable to turn on a normal television. \\
 
-Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase} 
+Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test persons is presented to every aspect of the system. The test cases of MOM can be found in section \vref{sec:testcase}.\\ 
 
 
+We want to primarily be validated on....
 (- choose the Heuristics which it should be evaluated against,(Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion) ) \fixme{TODO }
 
 
