komments be gone

--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -7,25 +7,24 @@ In a Heuristic evaluation the test person(s) look for errors and potential usabi
 \item[Learnability] make it ease for the user to learn and remembering the system:
 \begin{itemize}
 	\item Visibility - make it clear for the user which functions are available in the system and show what the system is doing.
-	\item Consistency - be consistent in the design features and let it be similar to other comparable systems %similar systems/håber mening statid er der
+	\item Consistency - be consistent in the design features and let it be similar to other comparable systems
 	\item Familiarity - the language and symbols in the system should be familiar to the user.
-	\item Affordance -  E.g. if it looks like a button, it is a button. %pleas find en bedre sætning end 
+	\item Affordance -  E.g. if it looks like a button, it is a button. 
 \end{itemize}
 
 \item[Effectiveness] is who ease it is for the user to use it and how safe it is to use:
 \begin{itemize}
 	\item Navigation - provide support to enable people to move around. Make clear navigation instructions.
 	\item Control - make it clear who and what is in control, the user should be able to take control. There should be a connection between what happens in the system and what will happen outside of the system. 
-	%is the mapping between control and effect. Relation what happens in system what happens in real life.
 	\item Feedback - give feedback on what have happened after user do an action in the system.
-	\item Recovery - how good it is to recover if the user makes an error. %e.g. user delete profile recover=> no
+	\item Recovery - how good it is to recover if the user makes an error. 
 	\item Constraints - prevent people from doing inappropriate things in the system. This should be able to prevent serious error.
 \end{itemize}
 
 \item[Accommodation] accommodating differences between and respecting those differences:
 \begin{itemize}
-	\item Flexibility - let there be multiple ways of doing things.%=> dash bord if it worked
-	\item Style - is the design attractive to the user. %who do it looks - attractive stylish???
+	\item Flexibility - let there be multiple ways of doing things.
+	\item Style - is the design attractive to the user. 
 	\item Conviviality - be polite and friendly. Do not use aggressive language.
 \end{itemize}
 \end{description}
